--- a/AR.html
+++ b/AR.html
@@ -1,243 +1,68 @@
-<!DOCTYPE html>
-<html lang="zh">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>AR图像追踪 - 医生信息</title>
-    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
 
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-            font-family: Arial, sans-serif;
-        }
-        #ar-scene {
-            width: 100%;
-            height: 100vh;
-            display: block;
-        }
-        .arjs-loader {
-            height: 100%;
-            width: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            background-color: rgba(0, 0, 0, 0.8);
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 1.2em;
-            z-index: 9999;
-        }
-        #message-box {
-            position: fixed;
-            bottom: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            background-color: rgba(0,0,0,0.7);
-            color: white;
-            padding: 10px 20px;
-            border-radius: 8px;
-            z-index: 10000;
-            display: none;
-            text-align: center;
-        }
-    </style>
-</head>
-<body style="margin: 0; overflow: hidden;">
-    <div class="arjs-loader">
-        <div>正在加载AR体验，请稍候...</div>
-    </div>
-
-    <div id="message-box"></div>
-
-    <a-scene
-        id="ar-scene"
-        vr-mode-ui="enabled: false;"
-        renderer="logarithmicDepthBuffer: true; precision: medium; antialias: true; colorManagement: true;"
-        arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;"
-        gesture-detector
-        embedded>
-
-        <a-nft
-            id="imageMarker"
-            type="nft"
-            url="./mymarker"
-            smooth="true"
-            smoothcount="10"
-            smoothtolerance=".01"
-            smooththreshold="5"
-            emitevents="true">
-
-            <a-entity
-                id="doctorInfo"
-                position="0 0 -50"
-                rotation="0 0 0"
-                scale="50 50 50"
-                visible="false">
-                <!-- 主立方体作为医生信息容器 -->
-                <a-box
-                    id="mainBox"
-                    color="#4CC3D9"
-                    depth="1.5"
-                    height="1.5"
-                    width="1.5"
-                    opacity="0.9">
-                    <a-animation attribute="rotation"
-                                to="0 360 0"
-                                loop="true"
-                                dur="12000"
-                                easing="linear"></a-animation>
-                </a-box>
-                <!-- 添加文本信息 -->
-                <a-text
-                    value="医生信息"
-                    position="0 0.8 0.76"
-                    scale="0.5 0.5 0.5"
-                    color="white"
-                    align="center"></a-text>
-                <a-text
-                    value="专业：外科"
-                    position="0 0.5 0.76"
-                    scale="0.3 0.3 0.3"
-                    color="white"
-                    align="center"></a-text>
-                <a-text
-                    value="经验：10年"
-                    position="0 0.3 0.76"
-                    scale="0.3 0.3 0.3"
-                    color="white"
-                    align="center"></a-text>
-            </a-entity>
-        </a-nft>
-
-        <a-entity camera></a-entity>
-    </a-scene>
-
-    <script>
-        // 等待场景加载完成
-        document.addEventListener('DOMContentLoaded', function () {
-            const sceneEl = document.querySelector('a-scene');
-            const markerEl = document.querySelector('#imageMarker');
-            const doctorInfoEl = document.querySelector('#doctorInfo');
-            const messageBox = document.getElementById('message-box');
-
-            function showMessage(text, duration = 3000) {
-                messageBox.textContent = text;
-                messageBox.style.display = 'block';
-                setTimeout(() => {
-                    messageBox.style.display = 'none';
-                }, duration);
-            }
-
-            if (sceneEl) {
-                sceneEl.addEventListener('loaded', function () {
-                    console.log("A-Frame 场景已加载");
-                    const loader = document.querySelector('.arjs-loader');
-                    if (loader) {
-                        loader.style.display = 'none';
-                    }
-                    showMessage("AR系统已加载，请将相机对准医生图片以查看详细信息。", 5000);
-                });
-
-                sceneEl.addEventListener('arjs-nft-loaded', function (event) {
-                    console.log("AR.js NFT 系统已加载", event.detail);
-                    showMessage("NFT追踪器已准备就绪。");
-                });
-
-                sceneEl.addEventListener('arjs-nft-init-data', function (event) {
-                    console.log("AR.js NFT 初始化数据", event.detail);
-                });
-
-                sceneEl.addEventListener('arjs-nft-fetched', function (event) {
-                    console.log("AR.js NFT 数据已获取", event.detail.url, event.detail.name);
-                    showMessage(`已获取NFT数据: ${event.detail.name}`);
-                });
-
-                sceneEl.addEventListener('arjs-nft-error', function (event) {
-                    console.error("AR.js NFT 错误:", event.detail.error, "URL:", event.detail.url, "Name:", event.detail.name);
-                    let errorMsg = 'NFT加载错误。';
-                    if (event.detail.error) {
-                        if (event.detail.error.message) errorMsg += ` ${event.detail.error.message}`;
-                        else if (event.detail.error.name) errorMsg += ` ${event.detail.error.name}`;
-                        else errorMsg += ` ${JSON.stringify(event.detail.error)}`;
-                    }
-                    errorMsg += " 检查控制台获取详情。";
-                    showMessage(errorMsg, 7000);
-                });
-            }
-
-            if (markerEl) {
-                markerEl.addEventListener('markerfound', () => {
-                    console.log('图像标记已找到!');
-                    showMessage('图像标记已找到! 显示医生信息', 2000);
-                    if (doctorInfoEl) doctorInfoEl.setAttribute('visible', 'true');
-                });
-
-                markerEl.addEventListener('markerlost', () => {
-                    console.log('图像标记已丢失.');
-                    showMessage('图像标记已丢失.', 2000);
-                    if (doctorInfoEl) doctorInfoEl.setAttribute('visible', 'false');
-                });
-            } else {
-                console.error("未能找到 a-nft 元素。请检查 ID 是否正确。");
-                showMessage("错误: 未能初始化图像追踪器。", 5000);
-            }
-
-            function isWebGLAvailable() {
-                try {
-                    const canvas = document.createElement('canvas');
-                    return !!(window.WebGLRenderingContext && (canvas.getContext('webgl') || canvas.getContext('experimental-webgl')));
-                } catch (e) {
-                    return false;
-                }
-            }
-
-            if (!isWebGLAvailable()) {
-                showMessage("错误: 您的浏览器或设备不支持WebGL，AR功能可能无法正常工作。", 10000);
-                const loader = document.querySelector('.arjs-loader');
-                if (loader) {
-                    loader.innerHTML = '<div>错误: 您的浏览器或设备不支持WebGL。<br/>AR功能可能无法正常工作。</div>';
-                }
-            }
-
-            async function checkCameraPermission() {
-                if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
-                    try {
-                        const stream = await navigator.mediaDevices.getUserMedia({ video: true });
-                        stream.getTracks().forEach(track => track.stop());
-                        console.log("摄像头权限已授予或可用。");
-                    } catch (err) {
-                        console.error("摄像头访问被拒绝或出错: ", err);
-                        let msg = "摄像头访问出错: " + err.name;
-                        if (err.name === "NotAllowedError" || err.name === "PermissionDeniedError") {
-                             msg = "错误: 摄像头访问被拒绝。请授予摄像头权限。";
-                        } else if (err.name === "NotFoundError" || err.name === "DevicesNotFoundError") {
-                            msg = "错误: 未找到摄像头设备。";
-                        } else if (err.name === "NotReadableError") {
-                            msg = "错误: 摄像头被其他应用占用。请关闭其他使用摄像头的应用，然后刷新页面。";
-                        }
-                        showMessage(msg, 10000);
-                        const loader = document.querySelector('.arjs-loader');
-                        if (loader) {
-                            loader.innerHTML = `<div>${msg.replace(/\n/g, "<br/>")}<br/>请检查权限或设备。</div>`;
-                        }
-                    }
-                } else {
-                    const msg = "错误: 您的浏览器不支持getUserMedia API (摄像头访问)。";
-                    showMessage(msg, 10000);
-                     const loader = document.querySelector('.arjs-loader');
-                    if (loader) {
-                        loader.innerHTML = `<div>${msg}</div>`;
-                    }
-                }
-            }
-            // 延迟执行相机权限检查，确保AR.js有时间初始化
-            setTimeout(checkCameraPermission, 500);
-        });
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="importmap">
+    {
+      "imports": {
+	"three": "https://unpkg.com/three@0.160.0/build/three.module.js",
+	"three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/",
+	"mindar-image-three":"https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-three.prod.js"
+      }
+    }
     </script>
-</body>
+    <script type="module">
+      import * as THREE from 'three';
+      import { MindARThree } from 'mindar-image-three';
+      const mindarThree = new MindARThree({
+	container: document.querySelector("#container"),
+	imageTargetSrc: "https://api.2023gpt.top/fileSystem/download/20250517/3262eb95-4f52-4941-8222-b9b457e552f1.mind"
+      });
+      const {renderer, scene, camera} = mindarThree;
+      const anchor = mindarThree.addAnchor(0);
+      const geometry = new THREE.PlaneGeometry(1, 0.55);
+      const material = new THREE.MeshBasicMaterial( {color: 0x00ffff, transparent: true, opacity: 0.5} );
+      const plane = new THREE.Mesh( geometry, material );
+      anchor.group.add(plane);
+      const start = async() => {
+	await mindarThree.start();
+	renderer.setAnimationLoop(() => {
+	  renderer.render(scene, camera);
+	});
+      }
+      const startButton = document.querySelector("#startButton");
+      startButton.addEventListener("click", () => {
+	start();
+      });
+      stopButton.addEventListener("click", () => {
+	mindarThree.stop();
+	mindarThree.renderer.setAnimationLoop(null);
+      });
+    </script>
+    <style>
+      body {
+	margin: 0;
+      }
+      #container {
+	width: 100vw;
+	height: 100vh;
+	position: relative;
+	overflow: hidden;
+      }
+      #control {
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 2;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="control">
+      <button id="startButton">Start</button>
+      <button id="stopButton">Stop</button>
+    </div>
+    <div id="container">
+    </div>
+  </body>
 </html>
