--- a/ar1.html
+++ b/ar1.html
@@ -225,9 +225,9 @@
 	</div>
       </div>
 
-      <a-scene mindar-image="imageTargetSrc: https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.2/examples/image-tracking/assets/card-example/card.mind; showStats: false; uiScanning: #example-scanning-overlay;" embedded color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+      <a-scene mindar-image="imageTargetSrc: https://api.2023gpt.top/fileSystem/download/20250517/3262eb95-4f52-4941-8222-b9b457e552f1.mind; showStats: false; uiScanning: #example-scanning-overlay;" embedded color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
         <a-assets>
-          <img id="card" src="https://hiukim.github.io/mind-ar-js-doc/samples/assets/card-example/card.png" />
+          <img id="card" src="https://api.2023gpt.top/fileSystem/download/20250517/53e13719-e28e-4d95-a826-d8dd4c711a50.png" />
           <img id="icon-web" src="https://hiukim.github.io/mind-ar-js-doc/samples/assets/card-example/icons/web.png" />
           <img id="icon-location" src="https://hiukim.github.io/mind-ar-js-doc/samples/assets/card-example/icons/location.png" />
           <img id="icon-profile" src="https://hiukim.github.io/mind-ar-js-doc/samples/assets/card-example/icons/profile.png" />
