--- a/ar1.html
+++ b/ar1.html
@@ -27,11 +27,11 @@
 
         let currentTab = '';
         webButton.addEventListener('click', function (evt) {
-          text.setAttribute("value", "https://softmind.tech");
+          text.setAttribute("value", "https://svg.2023gpt.top/AD.html");
           currentTab = 'web';
         });
         emailButton.addEventListener('click', function (evt) {
-          text.setAttribute("value", "hello@softmind.tech");
+          text.setAttribute("value", "leongxj@icloud.com");
           currentTab = 'email';
         });
         profileButton.addEventListener('click', function (evt) {
@@ -40,13 +40,13 @@
         });
         locationButton.addEventListener('click', function (evt) {
           console.log("loc");
-          text.setAttribute("value", "Vancouver, Canada | Hong Kong");
+          text.setAttribute("value", "China | GuangDong");
           currentTab = 'location';
         });
 
         text.addEventListener('click', function (evt) {
           if (currentTab === 'web') {
-            window.location.href="https://softmind.tech";
+            window.location.href="https://svg.2023gpt.top/AD.html";
           }
         });
       }
@@ -219,7 +219,7 @@
     <div class="example-container">
       <div id="example-scanning-overlay" class="hidden">
         <div class="inner">
-          <img src="https://hiukim.github.io/mind-ar-js-doc/samples/assets/card-example/card.png"/>
+          <img src="https://api.2023gpt.top/fileSystem/download/20250517/53e13719-e28e-4d95-a826-d8dd4c711a50.png"/>
           <div class="scanline"></div>
         </div>
       </div>
