--- a/ar1.html
+++ b/ar1.html
@@ -532,9 +532,8 @@
 
     <!-- 中文文本覆盖层 -->
     <div class="chinese-text-overlay" id="chinese-overlay">
-      <div class="text-item" id="title-text">AR测试By.leong</div>
-      <div class="text-item" id="medical-text">医疗演示视频</div>
-      <div class="text-item" id="coffee-text">咖啡机AR演示</div>
+      <div class="text-item" id="medical-text">演示视频</div>
+      <div class="text-item" id="coffee-text">AR演示</div>
       <div class="text-item" id="advanced-text">高级AR体验</div>
       <div class="text-item" id="info-text"></div>
     </div>
@@ -574,7 +573,7 @@
 
           <a-entity id="content-container" position="0 0 0.01">
             <!-- 标题文本 -->
-            <a-text value="AR By.leong" color="black" align="center" width="2" position="0 0.4 0" font="https://cdn.aframe.io/fonts/Roboto-msdf.json"></a-text>
+            <a-text value="" color="black" align="center" width="2" position="0 0.4 0" font="https://cdn.aframe.io/fonts/Roboto-msdf.json"></a-text>
             
             <!-- 内容项 - 使用单独的位置管理 -->
             <a-entity id="items-container" position="0 0 0">
@@ -595,7 +594,7 @@
                 <!-- 图片底部文本框 -->
                 <a-entity position="0 -0.35 0.001">
                   <a-plane color="#FFF8E1" width="1" height="0.12" opacity="0.9"></a-plane>
-                  <a-text value="Coffee Machine" color="black" align="center" width="1" position="0 0 0.001" font="https://cdn.aframe.io/fonts/Roboto-msdf.json"></a-text>
+                  <a-text value="AR demonstration" color="black" align="center" width="1" position="0 0 0.001" font="https://cdn.aframe.io/fonts/Roboto-msdf.json"></a-text>
                 </a-entity>
               </a-entity>
               
