--- a/AD.html
+++ b/AD.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>智养云 - 阿尔兹海默症守护先行者</title>
+    <title>智养云 - 阿尔茨海默症群体守护者</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -197,7 +197,7 @@
 
     <header class="header w-full">
         <h1><i class="fas fa-brain"></i> 智养云</h1>
-        <p>中国OMO阿尔兹海默症群体守护先行者</p>
+        <p>中国OMO阿尔茨海默症群体守护者</p>
     </header>
 
     <nav class="w-full max-w-4xl mx-auto p-4">
@@ -214,7 +214,7 @@
             <h2 class="section-title"><i class="fas fa-info-circle"></i> 欢迎来到智养云</h2>
             <div class="info-box">
                 <p class="text-gray-700 leading-relaxed">
-                    “智养云”是一个致力于通过线上互动与线下关怀相结合（OMO模式），为阿尔兹海默症患者及其家庭提供全方位支持的平台。我们希望通过科技的力量，延缓病程发展，提升患者生活质量，并为照护者提供有效的帮助和资源。
+                    “智养云”是一个致力于通过线上互动与线下关怀相结合（OMO模式），为阿尔茨海默症患者及其家庭提供全方位支持的平台。我们希望通过科技的力量，延缓病程发展，提升患者生活质量，并为照护者提供有效的帮助和资源。
                 </p>
             </div>
         </section>
@@ -397,7 +397,7 @@
                         <li><strong>认知评估与追踪：</strong> 定期通过App内的互动游戏和评估工具监测认知状况，生成简报供家人或专业人士参考。</li>
                         <li><strong>个性化训练计划：</strong> 根据评估结果，推荐合适的认知游戏组合和训练强度。(功能规划中)</li>
                         <li><strong>家庭支持圈：</strong> 建立家庭成员间的私密沟通平台，分享照护经验、管理患者日程、获取专业指导。(功能规划中)</li>
-                        <li><strong>健康知识普及：</strong> 提供易于理解的阿尔兹海默症相关科普文章、视频和播客。</li>
+                        <li><strong>健康知识普及：</strong> 提供易于理解的阿尔茨海默症相关科普文章、视频和播客。</li>
                     </ul>
                 </div>
                 <div class="sub-section">
@@ -426,12 +426,12 @@
             <h2 class="section-title"><i class="fas fa-notes-medical"></i> 健康资讯与照护指南</h2>
             <div class="info-box">
                 <p class="mb-4">
-                    了解阿尔兹海默症，学习有效的照护方法，与我们一起为患者和家庭提供支持。本版块内容将持续更新。
+                    了解阿尔茨海默症，学习有效的照护方法，与我们一起为患者和家庭提供支持。本版块内容将持续更新。
                 </p>
                 <div class="sub-section">
-                    <h4><i class="fas fa-disease mr-2"></i>认识阿尔兹海默症</h4>
+                    <h4><i class="fas fa-disease mr-2"></i>认识阿尔茨海默症</h4>
                     <ul class="list-disc space-y-1">
-                        <li><a href="#" class="text-blue-600 hover:underline">阿尔兹海默症的10个早期信号 (文章)</a></li>
+                        <li><a href="#" class="text-blue-600 hover:underline">阿尔茨海默症的10个早期信号 (文章)</a></li>
                         <li><a href="#" class="text-blue-600 hover:underline">疾病的不同阶段及其特点 (图文介绍)</a></li>
                         <li><a href="#" class="text-blue-600 hover:underline">如何区分正常的衰老与认知障碍？ (科普视频)</a></li>
                         <li><a href="#" class="text-blue-600 hover:underline">诊断流程简介 (文章)</a></li>
@@ -458,7 +458,7 @@
                 </div>
                 <div class="sub-section">
                     <h4><i class="fas fa-newspaper mr-2"></i>最新研究与进展</h4>
-                     <p><em>（此版块将定期更新阿尔兹海默症领域的前沿研究和治疗进展，敬请期待。）</em></p>
+                     <p><em>（此版块将定期更新阿尔茨海默症领域的前沿研究和治疗进展，敬请期待。）</em></p>
                 </div>
                 <div class="sub-section">
                     <h4><i class="fas fa-tools mr-2"></i>实用工具与资源下载</h4>
