--- a/index.html
+++ b/index.html
@@ -1310,7 +1310,7 @@
                         credentials: 'omit',
                         signal,
                         body: JSON.stringify({
-                            model: 'claude-3-7-sonnet-20250219',
+                            model: 'claude-opus-4-20250514',
                             messages: [
                                 {
                                     role: 'system',
