--- a/wy.html
+++ b/wy.html
@@ -375,7 +375,7 @@
             <p class="subtitle">专为维吾尔语设计的文字转换工具，支持从右向左阅读方向、实时预览和虚拟键盘输入</p>
             <div class="language-info">
                 <i class="fas fa-info-circle"></i>
-                <span>维吾尔语（ئۇيغۇر تىلى）属于阿尔泰语系突厥语族，使用阿拉伯字母书写，阅读方向为从右向左</span>
+                <span>维吾尔语（ئۇيغۇر تىلى）阅读方向为从右向左</span>
             </div>
         </header>
         
