--- a/slai.html
+++ b/slai.html
@@ -832,85 +832,107 @@
         }
 
         @media (max-width: 480px) {
-            .message-avatar {
-                width: 30px;
-                height: 30px;
+            .container {
+                height: 100dvh;
+                min-height: 0;
+            }
+
+            .config-section {
+                padding: 6px 4px 6px 4px;
+                font-size: 13px;
+                max-height: 120px;
+                overflow-y: auto;
+            }
+
+            .config-group {
+                flex-direction: column;
+                align-items: stretch;
+                gap: 4px;
+            }
+
+            .config-group label {
+                min-width: auto;
+                font-size: 13px;
+            }
+
+            .advanced-settings {
+                padding-top: 4px;
+                margin-top: 4px;
                 font-size: 12px;
             }
 
-            .message-content {
-                max-width: 90%;
-                padding: 10px;
-                font-size: 14px;
-            }
-
             .input-section {
-                padding: 10px;
+                padding: 6px 4px;
             }
 
             .input-group {
-                flex-wrap: wrap;
-            }
-
-            .attachment-indicator {
-                order: 1;
-                width: 36px;
-                height: 36px;
+                gap: 4px;
             }
 
             #messageInput {
-                order: 3;
-                width: 100%;
-                margin-top: 8px;
+                min-height: 32px;
+                font-size: 14px;
+                padding: 8px;
+                border-radius: 18px;
             }
 
             #sendButton,
             #stopButton {
-                order: 2;
-                padding: 10px;
+                padding: 8px 12px;
+                font-size: 14px;
+                border-radius: 18px;
             }
 
-            .header-buttons {
-                position: static;
-                transform: none;
-                margin-top: 10px;
-                justify-content: center;
+            .chat-container {
+                padding: 8px 2px;
+                min-height: 120px;
+                max-height: calc(100dvh - 220px);
+                /* 220px = config-section+input-section最大高度+余量 */
+            }
+
+            .message-content {
+                max-width: 98%;
+                padding: 8px;
+                font-size: 14px;
             }
 
             .header h1 {
+                font-size: 18px;
                 padding-right: 0;
             }
 
-            /* 强制限制所有消息内容中的图片尺寸 */
+            .header h3 {
+                font-size: 12px;
+            }
+
+            .header-buttons {
+                transform: none;
+                margin-top: 4px;
+                justify-content: center;
+            }
+
+            .bulk-controls {
+                width: 98%;
+                font-size: 13px;
+                padding: 6px 4px;
+            }
+
+            /* 保证图片不撑满屏 */
             .message-content img {
                 max-width: 100% !important;
                 height: auto !important;
-                max-height: 300px !important;
+                max-height: 180px !important;
                 object-fit: contain !important;
             }
 
-            /* 特别处理图片容器 */
-            .message-content p:has(img),
-            .message-content div:has(img) {
-                max-width: 100%;
-                overflow: hidden;
+            /* 文件上传区域适配 */
+            .file-upload-container {
+                padding: 6px 2px;
             }
 
-            /* 移动端优化按钮位置 */
-            .message.user .edit-button,
-            .message.user .resend-button,
-            .message.user .delete-button {
-                right: -30px;
-            }
-
-            .message.user .edit-button {
-                right: -30px;
-                top: 30px;
-            }
-
-            .message.user .resend-button {
-                right: -30px;
-                top: 60px;
+            .file-item {
+                width: 70px;
+                height: 90px;
             }
         }
     </style>
