--- a/slai.html
+++ b/slai.html
@@ -903,7 +903,7 @@
 
             .header h3 {
                 font-size: 12px;
-                margin-bottom: 32px;
+                margin-bottom: 40px;
             }
 
             .header-buttons {
@@ -912,7 +912,7 @@
                 flex-wrap: wrap;
                 justify-content: center;
                 margin-top: -24px;
-                margin-bottom: 6px;
+                margin-bottom: 16px;
                 z-index: 2;
             }
 
@@ -944,6 +944,11 @@
             .message.user .delete-button {
                 right: -22px;
                 left: auto;
+            }
+
+            .message.assistant .delete-button {
+                left: -22px;
+                right: auto;
             }
 
             /* 保证图片不撑满屏 */
