--- a/slai.html
+++ b/slai.html
@@ -937,8 +937,10 @@
                 font-size: 12px;
                 left: -22px;
                 top: 2px;
-                z-index: 3;
+                z-index: 10 !important;
                 opacity: 1 !important;
+                display: flex !important;
+                pointer-events: auto;
             }
 
             .message.user .delete-button {
