--- a/slai.html
+++ b/slai.html
@@ -39,13 +39,21 @@
             position: relative;
         }
 
+        .header h3 {
+            font-size: 12px;
+            margin-bottom: 20px;
+            /* 增大与按钮的间距 */
+        }
+
         .header-buttons {
-            position: absolute;
-            right: 15px;
-            top: 50%;
-            transform: translateY(-50%);
+            position: static;
             display: flex;
-            gap: 10px;
+            flex-wrap: wrap;
+            justify-content: center;
+            margin-top: -12px;
+            margin-bottom: 16px;
+            /* 增大底部间距 */
+            z-index: 2;
         }
 
         .header-button {
